--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^1.4.1
-
+  animated_bottom_navigation_bar: ^0.3.2
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
