--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   animated_bottom_navigation_bar: ^0.3.2
+  dio: ^4.0.0
   cupertino_icons: ^1.0.2
+  get: ^4.1.4
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
