--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animated_bottom_navigation_bar: ^0.3.2
   dio: ^4.0.0
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   flutter_staggered_grid_view: ^0.4.0
-
+  connectivity: ^3.0.6
+  get_it: ^7.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
