--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dio: ^4.0.0
   cupertino_icons: ^1.0.2
   get: ^4.1.4
+  intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.0
   connectivity: ^3.0.6
   get_it: ^7.1.3
